@@ -6,13 +6,14 @@ import static uk.nhs.adaptors.common.util.FileUtil.readResourceAsString;
 import static uk.nhs.adaptors.connector.model.MigrationStatus.EHR_EXTRACT_REQUEST_ACCEPTED;
 import static uk.nhs.adaptors.connector.model.MigrationStatus.EHR_EXTRACT_TRANSLATED;
 import static uk.nhs.adaptors.connector.model.MigrationStatus.MIGRATION_COMPLETED;
+import static uk.nhs.adaptors.connector.model.MigrationStatus.CONTINUE_MESSAGE_PROCESSING;
+import static uk.nhs.adaptors.connector.model.MigrationStatus.ERROR_LRG_MSG_GENERAL_FAILURE;
 import static uk.nhs.adaptors.pss.util.JsonPathIgnoreGeneratorUtil.generateJsonPathIgnores;
 
 import java.io.PrintWriter;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.commons.lang3.RandomStringUtils;
@@ -78,7 +79,7 @@ public abstract class BaseEhrHandler {
 
     protected void startPatientMigrationJourney() {
         patientMigrationRequestDao.addNewRequest(patientNhsNumber, conversationId, losingODSCode, winingODSCode);
-        migrationStatusLogService.addMigrationStatusLog(EHR_EXTRACT_REQUEST_ACCEPTED, conversationId);
+        migrationStatusLogService.addMigrationStatusLog(EHR_EXTRACT_REQUEST_ACCEPTED, conversationId, null);
     }
 
     protected boolean isEhrExtractTranslated() {
@@ -89,6 +90,14 @@ public abstract class BaseEhrHandler {
     protected boolean isEhrMigrationCompleted() {
         var migrationStatusLog = migrationStatusLogService.getLatestMigrationStatusLog(conversationId);
         return MIGRATION_COMPLETED.equals(migrationStatusLog.getMigrationStatus());
+    }
+    protected boolean isCOPCMessageProcessing() {
+        var migrationStatusLog = migrationStatusLogService.getLatestMigrationStatusLog(conversationId);
+        return CONTINUE_MESSAGE_PROCESSING.equals(migrationStatusLog.getMigrationStatus());
+    }
+    protected boolean isLargeGeneralMessageFailure() {
+        var migrationStatusLog = migrationStatusLogService.getLatestMigrationStatusLog(conversationId);
+        return ERROR_LRG_MSG_GENERAL_FAILURE.equals(migrationStatusLog.getMigrationStatus());
     }
 
     protected void verifyBundle(String path) throws JSONException {
@@ -102,7 +111,7 @@ public abstract class BaseEhrHandler {
         var bundle = fhirParserService.parseResource(patientMigrationRequest.getBundleResource(), Bundle.class);
         var combinedList = Stream.of(generateJsonPathIgnores(bundle), ignoredJsonPaths)
             .flatMap(List::stream)
-            .collect(Collectors.toList());
+            .toList();
 
         assertBundleContent(patientMigrationRequest.getBundleResource(), expectedBundle, combinedList);
     }
